--- a/page.htm
+++ b/page.htm
@@ -31,6 +31,7 @@
 					<p id= "errpss"></p>
                     <p id= "errmail"></p>
                     <button type="submit" id="Button">Register</button><br>
+                    <p>hello</p>
 					
             </form>
         </div>
