--- a/page.htm
+++ b/page.htm
@@ -31,7 +31,7 @@
 					<p id= "errpss"></p>
                     <p id= "errmail"></p>
                     <button type="submit" id="Button" onsubmit="return validation();">Register</button><br>
-                
+                    <p>Hi kiana</p>
 					
             </form>
         </div>
